2006-04-15 CTAF <>
	* emacs : alt+left, alt+right change buffer, shift sucked
	* ssft.sh : use $PAGER, set it if unset
	* ct-installconf : call ct-profile
	* ssft.sh : correct a bug with ssft_check_frontend (if dialog dont exist)
	* ct-installconf : create perso/* directory before calling ct-profile
	* globalenv : $SHELL should be set by the shell: unset it
	* globalenv, alias : which => \which (bash which suck)
	* ct-profile : dont kill process when user dont want to modify a value (intregration with ct-installconf)
	
2006-04-14 CTAF <>
	* ct-installconf : choice between "install all" "ask for each" "choose in a list" method to install pkg
	* ssft.sh : check if the frontend select is good, else choose a good one
	* emacs : console kdb : iso-8859-15 (to test)
	* emacs : shell (sh and csh mode) indentation = 2 space !!!
	* ssft.sh : 2 new frontend: "console" and "graphic"
	* ct-add-wallpaper : if no args specified launch a file select box
	* ct-profile : bug with choose wallpaper
	* ct-installconf : ask for installation only if pkg is not installed
	* grktools.sh : grk_testfile: diff between files
	* ssft.sh : default size : 20 x 70

2006-04-12 CTAF <>
	* ct-installconf : use default value with ssft
	* ct-profile : use default value with ssft
	* ct-installconf : use a multiple choice list to install just the package the user want
	* global : bug at epita (dialog don't work well with ssh)
	* grktools.sh : new shell tools to link/copy file/dir with backup and uninstall

2006-04-11 CTAF <>
	* ssft.sh : added "shell script frontend" (lib from debian)
	* ct-profile : use ssft
	* ct-profile : new value ctafconf_interface to choose a default frontend
	* global : remove empty file in .ctafconf/perso/*/
	* ct-installconf : create directory in perso if they don't exist
	* ssft.sh : remove source check, adapt title, cleanup
	* enlightenment : etc/enlightenment is static, ~/.enlightenment is a real directory
	* enlightenment : scan for ctafconf wallpaper (in perso and in etc)