@@ -5,7 +5,7 @@
 ## Login   <ctaf@epita.fr>
 ##
 ## Started on  Wed Oct 12 00:20:30 2005 GESTES Cedric
-## Last update Fri Feb 10 19:41:26 2006 GESTES Cedric
+## Last update Sun Apr 16 02:47:21 2006 GESTES Cedric
 ##
 ##CTAFCONF
 ###
@@ -86,11 +86,17 @@ var_unset() {
   unset "$1"
 }
 
-ift() {
-  if [ $1 ] ; then
-    eval $2
-  fi
+# ift() {
+#   if [ $1 ] ; then
+#     eval $2
+#   fi
+# }
+
+null_which() {
+  which $1 >/dev/null 2>/dev/null
+  return $?
 }
+
 return
 
 csh_functions:
@@ -111,9 +117,9 @@ alias alias_unset 'unalias'
 
 alias var_set 'set \!:1=\!:2'
 alias var_unset 'unset \!:1'
-
-alias ift 'if ( { test \!* } ) then'
-alias iftelse 'echo else; else'
-alias iftend 'echo endif;endif'
+alias null_which 'which \!* >&/dev/null'
+# alias ift 'if ( { test \!* } ) then'
+# alias iftelse 'echo else; else'
+# alias iftend 'echo endif;endif'
 
 
